--- a/package.json
+++ b/package.json
@@ -8,11 +8,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^10.0.6",
-    "base-64": "^0.1.0",
-    "btoa-atob": "^0.1.2",
     "expo": "^35.0.0",
     "expo-font": "^7.0.0",
-    "fetch-timeout": "0.0.2",
     "node-fetch": "^2.6.0",
     "react": "16.8.3",
     "react-dom": "16.8.3",
@@ -28,8 +25,7 @@
     "react-navigation-stack": "^1.10.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "rn-fetch-blob": "^0.11.2"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
